@@ -14,6 +14,7 @@ Version 1.9.2+svn:
    * Converted some dialog boxes to GUI2
 * WML Engine:
    *  Created tag [petrify] (bug #17077). Moved [unpetrify] to lua.
+   *  Introduced [recall]fire_event=yes|no (default no) parameter (fixes bug #17083).
 
 Version 1.9.2:
  * Campaigns:
